--- a/web/package.json
+++ b/web/package.json
@@ -15,10 +15,12 @@
     "@types/react-redux": "^4.4.36",
     "es6-promise": "^4.0.5",
     "es6-promise-polyfill": "^1.2.0",
+    "file-loader": "^0.10.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "reflect-metadata": "^0.1.9",
+    "semantic-ui-css": "^2.2.9",
     "semantic-ui-react": "^0.64.7",
     "tsc": "^1.20150623.0"
   },
