--- a/api/src/Box9.Leds.Pi.Api.WebHost/App.config
+++ b/api/src/Box9.Leds.Pi.Api.WebHost/App.config
@@ -6,6 +6,7 @@
   </configSections>
 	<appSettings>
 		<add key="Host" value="http://localhost:8002" />
+		<add key="UseFadecandyServer" value="false" />
 	</appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
