--- a/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
+++ b/api/src/Box9.Leds.Manager.Api/Box9.Leds.Manager.Api.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Controllers\DeviceDiscoveryController.cs" />
     <Compile Include="Controllers\ProjectDeviceMappingController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
+    <Compile Include="Controllers\TimeController.cs" />
     <Compile Include="Controllers\VideoController.cs" />
     <Compile Include="Controllers\VideoPlaybackController.cs" />
     <Compile Include="EmptyResult.cs" />
